# voiceclaw

./: .gitignore  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md
voice-server/: .env.example  pyproject.toml
voice-server/src/: config.py  main.py
voice-server/src/gateway/: __init__.py  client.py
voice-server/src/stt/: qwen_asr.py
voice-server/src/tts/: qwen_tts.py
voice-server/src/ws/: handler.py
voice-server/tests/: test_main.py  test_stt.py  test_tts.py  test_ws.py
web-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-client/src/: App.css  App.tsx
web-client/src/components/: VoiceChat.css  VoiceChat.tsx
web-client/src/hooks/: index.ts  useVoiceClient.ts
